<resources>
    <string name="app_name">تست کنتور</string>
    <string name="font_menu">fonts/B_Koodak_Bold.ttf</string>
    <string name="font_home">fonts/B_Koodak_Bold.ttf</string>
    <string name="font_default">fonts/B_Yekan.ttf</string>
    <string name="SOFT_NAME">نرم افزار تست کنتور بلوتوث</string>
    <string name="PRODUCER_NAME">شرکت سنجش افزار آسیا</string>
    <string name="CUSTOMER_NAME">واحد تست</string>
    <string name="Setting_G">تنظیمات</string>
    <string name="Bazdid_G">بازدید</string>
    <string name="Module_G">ارتباط با ماژول</string>
    <string name="Test_G">تست کنـتور</string>
    <string name="TestContor_G">تست کنـتور</string>
    <string name="TestEnrege_G">اتصال کلمپ ها</string>
    <string name="ResultTest_G">نتایج تست</string>
    <string name="Polomp_G">پلمپ</string>
    <string name="Bazrasi_G">بازرسی</string>
    <string name="Readmeter_G">خواندن کنتور</string>
    <string name="Moshahedat_G">مشاهدات</string>
    <string name="Sanjesh_G">پارامترهای الکتریکی</string>
    <string name="CorrectCoeff">ضریب تصحیح</string>
    <string name="menuItemBazdid">بازدید</string>
    <string name="menuItemReport">گزارشات</string>
    <string name="menuItemConnectModule">ارتباط با ماژول</string>
    <string name="menuItemSetting">تنظیمات</string>
    <string name="menuItemBaseInfo">دریافت اطلاعات پایه</string>
    <string name="menuItemRecieveJoints">دریافت مشترکین</string>
    <string name="menuItemSendJoints">ارسال</string>
    <string name="menuItemAbout">درباره نرم افزار</string>
    <string name="menuItemExit">خروج</string>
    <string name="Farvardin_Tarikh">فروردین</string>
    <string name="Ordi_Tarikh">اردیبهشت</string>
    <string name="Khordad_Tarikh">خرداد</string>
    <string name="Tir_Tarikh">تیر</string>
    <string name="Mordad_Tarikh">مرداد</string>
    <string name="Sharivar_Tarikh">شهریور</string>
    <string name="Meher_Tarikh">مهر</string>
    <string name="Aban_Tarikh">آبان</string>
    <string name="Azar_Tarikh">آذر</string>
    <string name="Day_Tarikh">دی</string>
    <string name="Bahman_Tarikh">بهمن</string>
    <string name="Esfand_Tarikh">اسفند</string>
    <string name="Sat_Tarikh">شنبه</string>
    <string name="Sun_Tarikh">یکشنبه</string>
    <string name="Mon_Tarikh">دوشنبه</string>
    <string name="Tue_Tarikh">سه شنبه</string>
    <string name="Wed_Tarikh">چهارشنبه</string>
    <string name="Thu_Tarikh">پنج شنبه</string>
    <string name="Fri_Tarikh">جمعه</string>
    <string name="SaveOperationSuccess_msg">اطلاعات با موفقیت ثبت شد</string>
    <string name="Confilit_msg">در دسته جواب ریمارک های فوق مغایرت وجود دارد</string>
    <string name="ExistJoint_msg">مشترک در بانک وجود دارد</string>
    <string name="WaitForRecieveData_msg">لطفا منتظر باشید برنامه در حال دریافت اطلاعات می باشد</string>
    <string name="JointsSaveNum_msg">اطلاعات %1$s مشترک از %2$s مشترک در سایت ثبت نشده است</string>
    <string name="GroupName_msg">گروه بازرسی شما %s می باشد.آیا ادامه می دهید؟</string>
    <string name="ServerError_msg">پیام خطای سرور</string>
    <string name="msg">پیام</string>
    <string name="msg_Save_Maneh">با انتخاب گزینه تایید،تمام عملیات ذخیره شده پاک می شود. آیا مطمئن هستید؟  </string>
    <string name="msg_Save_Maneh_test">با انتخاب گزینه تایید،عملیات تست ذخیره شده پاک می شود. آیا مطمئن هستید؟  </string>
    <string name="msg_Save">با انتخاب گزینه تایید،مانع تست وبازرسی پاک می شود. آیا مطمئن هستید؟  </string>
    <string name="PleaseEneter_msg">لطفا برای %s مقدار معتبر وارد کنید</string>
    <string name="ConntecInternet_msg">لطفا دستگاه را به اینترنت متصل کنید</string>
    <string name="AccessServerError_msg">دسترسی به آدرس امکان پذیر نیست</string>
    <string name="GetRegionFromServer_msg">در حال دریافت داده ها از سرور</string>
    <string name="UsernameOrPassword_msg">نام کاربری یا کلمه عبور اشتباه است</string>
    <string name="TapAgainForExit_msg">برای خروج دوبار کلیک کنید</string>
    <string name="Exit_msg"> آیا برای خروج مطمئن هستید ؟ </string>
    <string name="SwapForChange_msg">برای تغییر دایره سفید رنگ را به چپ یا راست بکشید</string>
    <string name="PolombDataNotFound_msg">اطلاعات پلمپ یافت نشد</string>
    <string name="RemarkDataNotFound_msg">اطلاعات بازرسی یافت نشد</string>
    <string name="TestResultNotExsist_msg">هیچ نتیجه تستی وجود ندارد.</string>
    <string name="LocationNotFound_msg">"موقعیت مکانی یافت نشد."</string>
    <string name="TurnOnInternet_msg">لطفا برای موقعیت یابی دقیق تر اینترنت خط دستگاه خود را روشن نمایید.</string>
    <string name="TurnOnGPSSetting_msg">موقعیت یاب دستگاه فعال نمی باشد،آیا مایلید به منو تنظیمات بروید؟</string>
    <string name="GetLocationInProgress_msg">در حال دریافت موقعیت مکانی</string>
    <string name="GetClientInProgress_msg">در حال جستجو مشترک </string>
    <string name="PleaseWait_msg">لطفا منتظر بمانید...</string>
    <string name="DontShowHelp_msg">دیگر این راهنما نمایش داده نشود؟</string>
    <string name="ErrorInConnect_msg">خطا در اتصال به دستگاه</string>
    <string name="ClampDirectionError_msg">جهت کلمپ ها یکسان نیست</string>
    <string name="RecieveInProgress_msg">در حال دریافت...</string>
    <string name="TouchForDownloading_msg">جهت شروع دریافت،کلیک کنید</string>
    <string name="CantGetNewJob_msg">شما قادر به گرفتن کار جدید نمی باشید چون هنوز اطلاعات بطور کامل ارسال نشده است</string>
    <string name="RecieveProblem_msg">دریافت با مشکل مواجه شد</string>
    <string name="LoginProblem_msg">نمی توانید وارد شوید؟</string>
    <string name="Error_msg">پیام دریافت شده از سایت</string>
    <string name="Confirm_msg">آیا مایلید ذخیره شود ؟</string>
    <string name="Title_msg">توجه</string>
    <string name="FillOldAndNewPlombInfo_msg">لطفا اطلاعات مربوط به پلمپ قدیم را کامل پر کنید</string>
    <string name="NoClientFind_msg">مشترکی با این مشخصات یافت نشد</string>
    <string name="FillOldAndNewPlombInfoForceField_msg">لطفا فیلدهای %s را پر کنید</string>
    <string name="FillForceField_msg">لطفا فیلد %s را تکمیل کنید</string>
    <string name="CancelTest_msg">مشکلی در ارتباط با دستگاه پیش آمده است ،آیا عملیات تست متوقف شود؟</string>
    <string name="CheckDeviceIsOn_msg">لطفا از روشن بودن ماژول تست کنتور مطمئن شوید</string>
    <string name="TurnBluetoothOn_msg">لطفا از روشن بودن بلوتوث دستگاه مطمئن شوید</string>
    <string name="Downloding_msg">Downloading data,Please wait..</string>
    <string name="MeterUnknown_msg">مشخصات کنتور ثبت نشده است</string>
    <string name="ConnectionOK_msg">اتصال با سرور برقرار است</string>
    <string name="ConnectionFail_msg">مشکل در برقراری ارتباط با سرور</string>
    <string name="ClickToStartManualTes_msg">برای آغاز عملیات دور شماری کلیک کنید</string>
    <string name="WaitForIMEIConfirm_msg">درخواست شما در سایت ثبت شد،منتظر تایید مدیر سیستم باشید</string>
    <string name="NotValidIMEI_msg">طول شماره سریال وارد شده معتبر نیست</string>
    <string name="RegionIDNotSend_msg">کد امور برای ثبت سریال ارسال نشده است</string>
    <string name="DuplicateIMEI_msg">شماره سریال تکراری می باشد</string>
    <string name="NotRegisteredIMEI_msg">شماره سریال دستگاه شما ثبت نشده و مجاز به فعالیت نیست</string>
    <string name="NotConfirmedIMEI_msg">شماره سریال دستگاه شما هنوز تایید نشده است</string>
    <string name="ServerAddressNotSaved_msg">آدرس سرور برای دریافت اطلاعات ذخیره نشده است</string>
    <string name="AnswerGroupEmpty_msg">دسته جواب ها خالی است،لطفا دوباره تنظیمات جداول پایه را دریافت کنید</string>
    <string name="LowVolt_msg">ولتاژ یکی از فازها کمتر از حد میباشد</string>
    <string name="OutRangeVolt_msg">ولتاژ یکی از فازها خارج از بازه مجاز میباشد</string>
    <string name="OutRangeAmp_msg">آمپراژ یکی از فازها خارج از بازه مجاز میباشد</string>
    <string name="OutRangePF_msg">ضریب توان یکی از فازها خارج از بازه مجاز میباشد</string>
    <string name="SelectClampType_msg"> کلمپ پیش فرض</string>
    <string name="SelectableClampTypes_msg">کلمپ های قابل انتخاب</string>
    <string name="CommandTimeout_msg">خطای تایم اوت برای دریافت جواب از دستگاه تست رخ داد</string>
    <string name="TransferLayout_msg">اتصال با دستگاه قطع شده است</string>
    <string name="ErrorPercent">درصد خطا</string>
    <string name="TypeDateTest_TestResultAdapter">میلی ثانیه</string>
    <string name="UniqeField">اشتراک</string>
    <string name="Test">تست</string>
    <string name="ManehTestContor">مانع تست و بازرسی</string>
    <string name="TestResult">نمایش سابقه تست</string>
    <string name="StartResult">شروع تست</string>
    <string name="EnterTestActivity">ورود به فرم تست</string>
    <string name="Operation">عملیات</string>
    <string name="Detail">جزئیات</string>
    <string name="ConnectToTestModule">اتصال به دستگاه تست کنتور</string>
    <string name="ConnectToOpticalProb">اتصال به پروب نوری</string>
    <string name="AdminName">مدیر سیستم</string>
    <string name="omoorMarboote">امور مربوطه:</string>
    <string name="daryaftMoshtarakin">دریافت مشترکین</string>
    <string name="LogIn">ورود</string>
    <string name="DeviceIMEI">شماره سریال</string>
    <string name="SAA_Company">Sanjesh Afzar Asia Co LTD.</string>
    <string name="SendData">ارسال اطلاعات</string>
    <string name="Zero">0</string>
    <string name="ShowTestResult">پایان و مشاهده نتایج</string>
    <string name="SelectAll">انتخاب همه</string>
    <string name="Bluetooth">بلوتوث</string>
    <string name="PairedDevicesforTest">دستگاه های pair شده برای تست:</string>
    <string name="PairedDevicesforRead">دستگاه های pair شده برای قرائت:</string>
    <string name="Buzzer">Buzzer</string>
    <string name="DeviceVoiceOnOff">روشن و خاموش کردن صدای دستگاه</string>
    <string name="DeviceLightOnOff">روشن و خاموش کردن چراغ های دستگاه</string>
    <string name="LED">LED</string>
    <string name="Reset">ریست</string>
    <string name="PlusSign">+</string>
    <string name="DashSign">-</string>
    <string name="Eshterak">اشتراک</string>
    <string name="Shenas">شناسایی</string>
    <string name="Parvande">پرونده</string>
    <string name="Ramz">رمز</string>
    <string name="RamzRayaneh">رمز رایانه</string>
    <string name="Group">گروه مشترکین</string>
    <string name="SerialNumber">شماره بدنه</string>
    <string name="TariffType">نوع تعرفه</string>
    <string name="VoltType">نوع ولتاژ</string>
    <string name="ContractPower">قدرت قرارداد</string>
    <string name="ContarctDimand">دیماند مجاز</string>
    <string name="UseAvrage">متوسط مصرف</string>
    <string name="LastCycleUsage">مصرف دوره آخر</string>
    <string name="LastCycleKwatt">کیلو وات دوره آخر</string>
    <string name="ActiveNum">تعداد ارقام اکتیو</string>
    <string name="ReactiveNum">تعداد ارقام راکتیو</string>
    <string name="SerialNumberReactive">سریال راکتیو</string>
    <string name="BranchInstallDate">تاریخ انشعاب</string>
    <string name="Tel">تلفن</string>
    <string name="PostalCode">کد پستی</string>
    <string name="TariffCode">کد تعرفه</string>
    <string name="JointName">نام مشترک: </string>
    <string name="Address">آدرس</string>
    <string name="Play">ادامه</string>
    <string name="Pause">توقف</string>
    <string name="Unknown">ناشناس</string>
    <string name="Remark">بازرسی</string>
    <string name="Polomb">پلمپ</string>
    <string name="Readmeter">خواندن کنتور</string>
    <string name="Active">اکتیو</string>
    <string name="Reactive">راکتیو</string>
    <string name="OnePhase">تک فاز</string>
    <string name="ThreePhase">سه فاز</string>
    <string name="FirstTest">تست اول</string>
    <string name="SecondTest">تست دوم</string>
    <string name="MeterCoeff">ضریب کنتور</string>
    <string name="MeterConst">ثابت کنتور</string>
    <string name="SensorRate">نسبت سنسور</string>
    <string name="ErrorPercent99">ثبت خطای %99-</string>
    <string name="ManualPaulser">پالسر دستی</string>
    <string name="AutoPaulser">پالسر اتوماتیک</string>
    <string name="RoundNum">تعداد دور</string>
    <string name="PhaseR">R</string>
    <string name="PhaseS">S</string>
    <string name="PhaseT">T</string>
    <string name="Ok">تایید</string>
</resources>