<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/grey_200">

        <!-- Main Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <!-- Top Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Active/Reactive Layout -->
                <com.github.angads25.toggle.LabeledSwitch
                    android:id="@+id/switchTestType"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    app:on="true"
                    app:textOn="@string/Active"
                    app:textOff="@string/Reactive"
                    app:colorOn="#f16f13"
                    app:colorBorder="#f16f13"/>

                <!-- 1/3 Faz Layout -->
                <com.github.angads25.toggle.LabeledSwitch
                    android:id="@+id/switchPhase"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    app:on="true"
                    app:textOn="@string/OnePhase"
                    app:textOff="@string/ThreePhase"
                    app:colorOn="#f16f13"
                    app:colorBorder="#f16f13"/>

                <!-- Test 1/2 Layout -->
                <com.github.angads25.toggle.LabeledSwitch
                    android:id="@+id/switchTestNum"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    app:on="true"
                    app:textOn="@string/FirstTest"
                    app:textOff="@string/SecondTest"
                    app:colorOn="#f16f13"
                    app:colorBorder="#f16f13"/>

                <!-- Paulser Type-->
                <com.github.angads25.toggle.LabeledSwitch
                    android:id="@+id/switchPaulserType"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    app:on="true"
                    app:textOn="@string/AutoPaulser"
                    app:textOff="@string/ManualPaulser"
                    app:colorOn="#f16f13"
                    app:colorBorder="#f16f13"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="vertical">
            </LinearLayout>

            <!-- Info (center) Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <!-- Zarib CT -->
                <android.support.design.widget.TextInputLayout
                    android:fontFamily="@font/byekan"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/MeterCoeff"
                    android:layout_gravity="center">
                    <EditText android:id="@+id/edtZaribCT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/byekan"
                        android:textSize="18sp"
                        android:textColor="@color/grey_900"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:inputType="number"
                        android:maxLength="3"/>
                </android.support.design.widget.TextInputLayout>


                <!-- Sabete Kontor -->
                <!--android:inputType="numberDecimal" Ashari-->
                <android.support.design.widget.TextInputLayout
                    android:fontFamily="@font/byekan"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/MeterConst"
                    android:layout_gravity="center">
                    <EditText android:id="@+id/edtSabeteKontor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/byekan"
                        android:textSize="18sp"
                        android:textColor="@color/grey_900"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:inputType="number"
                        android:maxLength="5"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Nesbat Kontor -->
                <android.support.design.widget.TextInputLayout
                    android:fontFamily="@font/byekan"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/SensorRate"
                    android:layout_gravity="center">
                    <EditText android:id="@+id/edtNesbatKontor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/byekan"
                        android:textSize="18sp"
                        android:textColor="@color/grey_900"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:inputType="number"
                        android:maxLength="3"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Tedad Dor -->
                <android.support.design.widget.TextInputLayout
                    android:fontFamily="@font/byekan"
                    android:layout_width="0dp"
                    android:layout_weight="25"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/RoundNum"
                    android:layout_gravity="center">
                    <EditText android:id="@+id/edtTedadDor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/byekan"
                        android:textSize="18sp"
                        android:textColor="@color/grey_900"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:inputType="number"
                        android:maxLength="3" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- Sabte -99% -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="4dp">
                <CheckBox
                    android:id="@+id/cbSabte99"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/byekan"
                    android:textSize="14sp"
                    android:textDirection="rtl"
                    android:textAlignment="gravity"
                    android:gravity="right|center_vertical"
                    android:layoutDirection="rtl"
                    android:text="@string/ErrorPercent99"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Taeed Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTaeed"
            android:fontFamily="@font/byekan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:text="@string/Ok"/>
    </LinearLayout>

</ScrollView>
