<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="200dp">
    <!--Estrak-->
    <LinearLayout
        android:layoutDirection="rtl"

        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/byekan"
            android:gravity="bottom"
            android:text="@string/Eshterak" />
    <EditText
        android:fontFamily="@font/byekan"
        android:id="@+id/etEshterak"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:inputType="number"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <!--Parvandeh-->
    <LinearLayout
        android:layoutDirection="rtl"
        android:layout_width="match_parent"

        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/byekan"
            android:layout_width="wrap_content"
            android:text="@string/Parvande"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etFileId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"


            android:fontFamily="@font/byekan"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>

    <!--Ramze-->
    <LinearLayout
        android:layoutDirection="rtl"

        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/byekan"
            android:layout_width="wrap_content"
            android:text="@string/Ramz"
            android:layout_height="wrap_content" />
        <EditText
            android:fontFamily="@font/byekan"
            android:id="@+id/etRamz"
            android:textAlignment="center"
            android:layout_marginRight="66dp"
            android:inputType="number"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--SerialContor-->
    <LinearLayout

        android:layout_gravity="center_horizontal"
        android:layoutDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/byekan"
            android:layout_width="wrap_content"
            android:text="@string/SerialNumber"
            android:layout_height="wrap_content" />
        <EditText
            android:fontFamily="@font/byekan"
            android:id="@+id/etSerialContor"
            android:textAlignment="center"
            android:layout_marginRight="29dp"
            android:inputType="number"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--shenase-->
    <LinearLayout

        android:layout_gravity="center_horizontal"
        android:layoutDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:fontFamily="@font/byekan"
            android:layout_width="wrap_content"
            android:text="@string/Shenas"
            android:layout_height="wrap_content" />
        <EditText
            android:fontFamily="@font/byekan"
            android:id="@+id/etShenasai"
            android:textAlignment="center"
            android:layout_marginRight="29dp"
            android:inputType="text"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
</ScrollView>