<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_200">



    <!-- +1 Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:gravity="center"
        android:orientation="horizontal">

        <!-- R Layout -->
        <LinearLayout
            android:id="@+id/llR"
            android:layout_width="90dp"
            android:layout_height="185dp"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvRLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/byekan"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/PhaseR"
                android:textAlignment="gravity"
                android:textColor="@color/grey_900"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/llRight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape_circle">

                <TextView
                    android:id="@+id/tvRight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/byekan"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/DashSign"
                    android:textAlignment="gravity"
                    android:textColor="@color/grey_900"
                    android:textSize="32sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvRightColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/r_phase" />

        </LinearLayout>

        <!-- S Layout -->
        <LinearLayout
            android:id="@+id/llS"
            android:layout_width="90dp"
            android:layout_height="185dp"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvSLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/byekan"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/PhaseS"
                android:textAlignment="gravity"
                android:textColor="@color/grey_900"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/llCenter"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/shape_circle">

                <TextView
                    android:id="@+id/tvCenter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/byekan"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/PlusSign"
                    android:textAlignment="gravity"
                    android:textColor="@color/grey_900"
                    android:textSize="32sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCeneterColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/s_phase" />

        </LinearLayout>

        <!-- T Layout -->
        <LinearLayout
            android:id="@+id/llT"
            android:layout_width="90dp"
            android:layout_height="185dp"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvTLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/byekan"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/PhaseT"
                android:textAlignment="gravity"
                android:textColor="@color/grey_900"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/llLeft"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_circle">

                <TextView
                    android:id="@+id/tvLeft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/byekan"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/DashSign"
                    android:textAlignment="gravity"
                    android:textColor="@color/grey_900"
                    android:textSize="32sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLeftColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/t_phase" />
        </LinearLayout>




    </LinearLayout>


    <!-- Start Test Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnStartTest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/byekan"
        android:text="@string/Ok"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>
